# flamethrower

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
flamethrower/: api.py  hooks.py  patches.txt
flamethrower/config/: desktop.py
flamethrower/flamethrower/doctype/flamethrower_settings/: flamethrower_settings.js  flamethrower_settings.json  flamethrower_settings.py
flamethrower/flamethrower/page/flamethrower/: flamethrower.css  flamethrower.js  flamethrower.json  flamethrower.py
flamethrower/services/: external_erp.py
sales_assistant/: api.py  hooks.py  modules.txt
sales_assistant/config/: desktop.py
sales_assistant/sales_assistant/doctype/sales_assistant_settings/: sales_assistant_settings.js  sales_assistant_settings.json  sales_assistant_settings.py
sales_assistant/sales_assistant/page/sales_assistant/: sales_assistant.css  sales_assistant.js  sales_assistant.json  sales_assistant.py
sales_assistant/services/: external_erp.py  local_erp.py
